Add Alon's photo to about page with styled layout
- Add profile photo in story section with sticky positioning
- Style photo with cyan border and glow shadow effect
- Create responsive grid layout: photo left, content right
- Add hover effects for interactive feel
- Mobile responsive: stacks photo above content on small screens
- Photo integrates seamlessly with existing dark theme and neon styling

--- a/about.html
+++ b/about.html
@@ -38,13 +38,20 @@
     <section class="about-content">
         <div class="container">
             <div class="content-section">
-                <h2 class="section-heading">My Story</h2>
-                <p class="about-text">
-                    I'm currently a <strong>Technical Operations Manager at SuperPlay</strong>, working on Dice Dreams, 
-                    a top-10 grossing casual mobile game. Every day, I execute LiveOps operations—launching features, 
-                    running A/B tests, configuring events, and working closely with Product, Monetization, and Game Ops 
-                    teams to optimize player experience and business performance.
-                </p>
+                <div class="story-section">
+                    <div class="story-image">
+                        <img src="images/Alon photo.jpeg" alt="Alon Iter">
+                    </div>
+                    <div class="story-content">
+                        <h2 class="section-heading">My Story</h2>
+                        <p class="about-text">
+                            I'm currently a <strong>Technical Operations Manager at SuperPlay</strong>, working on Dice Dreams,
+                            a top-10 grossing casual mobile game. Every day, I execute LiveOps operations—launching features,
+                            running A/B tests, configuring events, and working closely with Product, Monetization, and Game Ops
+                            teams to optimize player experience and business performance.
+                        </p>
+                    </div>
+                </div>
                 <p class="about-text">
                     But here's what makes me different: <strong>I don't just execute—I design and build.</strong>
                 </p>
