Add House Party VR project with photo and video assets
- Rename BeatSpace VR to House Party VR
- Add main photo from House Party project to portfolio card
- Include 2 GIF videos (gif1.mp4, gif2.mp4) in assets folder
- Update project description to reflect social VR party experience
- Update project tags: VR/MR Design, Social Features, Unity Development
- Add responsive image display on project card

--- a/index.html
+++ b/index.html
@@ -101,25 +101,23 @@
                     </div>
                 </div>
 
-                <!-- VR DJ / BeatSpace -->
+                <!-- House Party VR -->
                 <div class="project-card">
                     <div class="project-image">
-                        <div class="project-placeholder" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);">
-                            <span class="placeholder-icon">🎧</span>
-                        </div>
+                        <img src="images/house party vr/main photo.png" alt="House Party VR gameplay">
                         <div class="project-badge">VR/MR</div>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">BeatSpace VR</h3>
+                        <h3 class="project-title">House Party VR</h3>
                         <p class="project-type">Mixed Reality Experience • Meta Quest</p>
                         <p class="project-description">
-                            A VR music experience where a DJ performs in your real space using passthrough MR. 
-                            Focused on player fantasy and music-driven interaction design.
+                            A social VR party experience where friends gather in shared virtual spaces.
+                            Features interactive environments, music integration, and social gameplay mechanics.
                         </p>
                         <div class="project-tags">
-                            <span class="tag">VR Design</span>
-                            <span class="tag">Unity</span>
-                            <span class="tag">Player Fantasy</span>
+                            <span class="tag">VR/MR Design</span>
+                            <span class="tag">Social Features</span>
+                            <span class="tag">Unity Development</span>
                         </div>
                         <div class="project-links">
                             <a href="beatspace-vr.html" class="link-primary">View Project →</a>
