Fix House Party VR project card link
- Replace broken beatspace-vr.html link with 'Case study coming soon' message
- Allows project card to display without 404 errors
- Placeholder for future detailed case study page

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <span class="tag">Unity Development</span>
                         </div>
                         <div class="project-links">
-                            <a href="beatspace-vr.html" class="link-primary">View Project →</a>
+                            <span class="link-secondary" style="opacity: 0.6;">Case study coming soon</span>
                         </div>
                     </div>
                 </div>
