Update portfolio copy, add project galleries, and new profile photo

--- a/about.html
+++ b/about.html
@@ -30,11 +30,8 @@
         <div class="container">
             <h1 class="about-title">Hi, I’m Alon Iter - Product-Driven Game Designer & Technical Operator.</h1>
             <p class="about-subtitle">
-                I am a Product-Driven Game Designer with a background in LiveOps and Technical Operations for casual
-                mobile games. I specialize in designing sustainable game economies, optimizing retention loops, and
-                prototyping new systems to validate fun before production. My strength lies in partnering with product
-                managers, data analysts, and engineers to ship features that not only engage players but also drive
-                measurable business growth.
+                Product-Driven Game Designer combining creative systems thinking with business logic. I partner with
+                PMs, Analysts, and Engineers to ship sustainable economies that engage players and drive growth.
             </p>
         </div>
     </section>
@@ -45,7 +42,7 @@
             <div class="content-section">
                 <div class="story-section">
                     <div class="story-image">
-                        <img src="images/Alon photo.jpeg" alt="Alon Iter">
+                        <img src="images/Alon photo.png" alt="Alon Iter">
                     </div>
                     <div class="story-content">
                         <h2 class="section-heading">Highlights</h2>
@@ -59,16 +56,12 @@
                     </div>
                 </div>
                 <h2 class="section-heading">How I work</h2>
-                <p class="about-text">
-                    I bridge the gap between <strong>creative game design</strong> and <strong>business KPIs</strong>. I
-                    don't just design features that are "fun"; I design systems that retain players, drive monetization,
-                    and scale effectively.
-                </p>
-                <p class="about-text">
-                    My process is data-informed: I start with a hypothesis based on player behavior, model the economy
-                    impact in spreadsheets, prototype quickly to validate the "feel", and then define clear specs for
-                    engineering.
-                </p>
+                <ul class="about-list">
+                    <li><strong>Hypothesis:</strong> Start with player behavior data and business goals.</li>
+                    <li><strong>Model:</strong> Forecast economy impact and sinks/sources in Excel.</li>
+                    <li><strong>Prototype:</strong> Build playable proofs-of-concept to validate "game feel".</li>
+                    <li><strong>Spec:</strong> Deliver engineering-ready documentation for production.</li>
+                </ul>
             </div>
 
             <!-- What I do best -->
