--- a/ice-analytics.html
+++ b/ice-analytics.html
@@ -77,44 +77,32 @@
 
             <!-- The Problem -->
             <div class="content-section">
-                <h2 class="content-title">The Challenge</h2>
+                <h2 class="content-title">Goal</h2>
                 <p class="content-text">
-                    As we scaled features, data became fragmented across ad networks, IAP stores, and gameplay event
-                    logs.
-                    Product managers couldn't answer simple questions like "Did the new shop layout increase ARPDAU?"
-                    without asking an engineer to pull raw logs.
-                </p>
-                <p class="content-text">
-                    <strong>Goal:</strong> Build a self-serve dashboard that democratizes data access and standardizes
-                    how we measure success.
+                    Democratize data access so Product Managers can answer "Did metrics improve?" without engineering
+                    delays.
                 </p>
             </div>
 
             <!-- The Solution -->
             <div class="content-section">
-                <h2 class="content-title">The Solution</h2>
-                <p class="content-text">
-                    ICE Analytics is a centralized dashboard (Internal/Concept) that aggregates data into three core
-                    views:
-                </p>
+                <h2 class="content-title">What I Built</h2>
                 <div class="design-decision">
-                    <h3 class="decision-title">1. Executive Health Check</h3>
+                    <h3 class="decision-title">1. Health Check</h3>
                     <p class="content-text">
-                        High-level DAU/MAU, Retention (D1, D7, D30), and Revenue pulses. Used for daily standups.
+                        High-level DAU and Revenue pulse for daily standups.
                     </p>
                 </div>
                 <div class="design-decision">
-                    <h3 class="decision-title">2. Economy Sink/Source Balance</h3>
+                    <h3 class="decision-title">2. Economy Monitor</h3>
                     <p class="content-text">
-                        Visualizes currency flow. Detects inflation early by comparing "Earn per User" vs "Spend per
-                        User" per level.
+                        Sinks vs. Sources visualization to detect inflation.
                     </p>
                 </div>
                 <div class="design-decision">
                     <h3 class="decision-title">3. Feature Funnels</h3>
                     <p class="content-text">
-                        Step-by-step conversion tracking for specific features (e.g., Tutorial Completion, Shop Purchase
-                        Flow).
+                        Conversion tracking for specific user flows.
                     </p>
                 </div>
             </div>
@@ -133,12 +121,10 @@
 
             <!-- Learnings -->
             <div class="content-section">
-                <h2 class="content-title">Product Learnings</h2>
+                <h2 class="content-title">Insight & Result</h2>
                 <p class="content-text">
-                    Building this tool taught me that <strong>data without context is noise</strong>. The initial
-                    version had too many charts;
-                    the V2 focused only on actionable metrics (Red/Green indicators) which increased adoption by the
-                    design team significantly.
+                    V1 failed because it had too many charts. I rebuilt V2 to show only Red/Green health indicators,
+                    doubling adoption by the design team.
                 </p>
             </div>
 
