--- a/index.html
+++ b/index.html
@@ -28,22 +28,23 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <p class="hero-subtitle">Game Product & Systems Designer</p>
+                <p class="hero-subtitle">Game Systems Designer + LiveOps Operator</p>
                 <h1 class="hero-title">
-                    I design, balance, and scale<br>
-                    <span class="accent">F2P Economies</span> and LiveOps Systems
+                    I design, run, and optimize<br>
+                    <span class="accent">F2P Economies</span> and LiveOps Events
                 </h1>
                 <p class="hero-description">
-                    Senior Game Designer & Technical Operator specializing in retention loops, monetization strategy,
-                    and data-driven feature tuning for casual mobile games.
+                    Technical Ops Manager in mobile F2P. I ship live content end to end: offers and configs,
+                    segmentation,
+                    QA, KPI monitoring, and fast iteration based on player data.
                 </p>
                 <div class="chips">
-                    <span class="chip">Economy Design</span>
-                    <span class="chip">LiveOps Strategy</span>
-                    <span class="chip">Rapid Prototyping</span>
+                    <span class="chip">Economy Tuning</span>
+                    <span class="chip">LiveOps Execution</span>
+                    <span class="chip">Data-Driven Iteration</span>
                 </div>
                 <div class="hero-cta">
-                    <a href="#projects" class="btn btn-primary">View Portfolio</a>
+                    <a href="#projects" class="btn btn-primary">Explore Projects</a>
                     <a href="about.html" class="btn btn-secondary">About Me</a>
                 </div>
             </div>
@@ -88,11 +89,9 @@
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">3D Rhythm Runner</h3>
-                        <p class="project-type">Economy & Systems Design</p>
                         <p class="project-description">
-                            Prototypes a complete F2P loop to test core progression pacing. Designed the soft currency
-                            economy, difficulty curve, and shop system to validate the "grind vs. reward" balance for
-                            retention.
+                            Browser-based rhythm runner to test progression pacing. Designed the difficulty curve and
+                            soft currency economy to validate the "grind vs. reward" loop.
                         </p>
                         <div class="project-tags">
                             <span class="tag">Economy Design</span>
@@ -116,10 +115,9 @@
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Merge Lab</h3>
-                        <p class="project-type">Mobile Puzzle • Game Economy</p>
                         <p class="project-description">
-                            Mobile-first merge puzzle with an integrated Level Editor and real-time win-rate analytics.
-                            Designed to test rapid iteration loops based on player data.
+                            Mobile merge game with integrated Level Editor. Reduced balance iteration cycles from days
+                            to seconds using real-time on-device definitions.
                         </p>
                         <div class="project-tags">
                             <span class="tag">Mobile UI</span>
@@ -142,10 +140,9 @@
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Lucky Tower</h3>
-                        <p class="project-type">Retention LiveOps Event • Product Design</p>
                         <p class="project-description">
-                            Designed a high-stakes "push-your-luck" event to lift D7 retention. Created the full feature
-                            spec, probability models, and reward pacing to maximize session depth and currency sinks.
+                            Risk-reward LiveOps event designed to lift D7 retention. Modeled probability curves and
+                            reward pacing to maximize session depth.
                         </p>
                         <div class="project-tags">
                             <span class="tag">LiveOps Strategy</span>
@@ -172,9 +169,8 @@
                         <h3 class="project-title">House Party VR</h3>
                         <p class="project-type">Mixed Reality Experience • Technical Design</p>
                         <p class="project-description">
-                            Rapidly prototyped a mixed reality social experience on Meta Quest 3 using Unity. Built
-                            complex interaction systems and audio-reactive environments to test new engagement
-                            mechanics.
+                            Mixed Reality social prototype for Meta Quest 3. Built gesture-based interactions to test
+                            "digital presence" without UI friction.
                         </p>
                         <div class="project-tags">
                             <span class="tag">Technical Design</span>
@@ -201,8 +197,8 @@
                         <h3 class="project-title">ICE Analytics</h3>
                         <p class="project-type">Product Intelligence Tool • Product Manager</p>
                         <p class="project-description">
-                            Built a centralized dashboard to track ARPDAU, LTV, and retention cohorts. Standardized KPI
-                            definitions across teams to enable faster, data-driven decisions on feature performance.
+                            Product intelligence dashboard for live games. Centralized fragmented data sources to enable
+                            faster, autonomous decision-making for PMs.
                         </p>
                         <div class="project-tags">
                             <span class="tag">Product Management</span>
