--- a/lucky-tower.html
+++ b/lucky-tower.html
@@ -83,16 +83,9 @@
 
             <!-- The Problem -->
             <div class="content-section">
-                <h2 class="content-title">The Problem</h2>
+                <h2 class="content-title">Goal</h2>
                 <p class="content-text">
-                    Casual F2P games often drop in engagement during days 3 to 7. Players finish the early "new game"
-                    excitement,
-                    then motivation dips before long-term habits form.
-                </p>
-                <p class="content-text">
-                    <strong>Goal:</strong> Design a low-dev LiveOps event that creates short-term goals, meaningful
-                    decisions,
-                    and repeat play across a 7-day window, without feeling pay-to-win.
+                    Lift mid-week (D3-D7) retention by creating a high-stakes, recurring engagement anchor.
                 </p>
             </div>
 
@@ -100,13 +93,10 @@
             <div class="content-section">
                 <h2 class="content-title">The Solution</h2>
                 <p class="content-text">
-                    Lucky Tower is a weekly, resettable event built around a simple loop:<br>
-                    1. climb floors, 2) choose "cash out" or "push your luck", 3) spend earned coins on optional assists
-                    and cosmetics.
-                </p>
+                <h2 class="content-title">The Solution</h2>
                 <p class="content-text">
-                    <strong>Why it works:</strong> it combines easy onboarding with repeated decision moments that
-                    naturally extend session length.
+                    A weekly "push-your-luck" event. Players climb floors for exponential rewards but risk losing
+                    everything if they fail to cash out.
                 </p>
             </div>
 
@@ -196,17 +186,11 @@
 
             <!-- Prototype Learnings -->
             <div class="content-section">
-                <h2 class="content-title">Prototype Learnings</h2>
-                <ul class="content-list">
-                    <li><strong>Simplicity beat complexity:</strong> extra floor types and combos increased cognitive
-                        load
-                        and reduced tension. The clean cash-out loop played better.</li>
-                    <li><strong>Pricing needed tuning:</strong> lowering coin costs improved usage of assists and kept
-                        runs moving.</li>
-                    <li><strong>Prototype aligned teams faster:</strong> it clarified scope, monetization flow, and
-                        analytics
-                        requirements early.</li>
-                </ul>
+                <h2 class="content-title">Data & Insight</h2>
+                <p class="content-text">
+                    Prototype testing showed complex floor types reduced tension. I cut them to focus purely on the
+                    'Cash Out vs. Risk' decision.
+                </p>
             </div>
 
             <!-- Next Iterations -->
@@ -229,6 +213,16 @@
             </div>
         </div>
     </section>
+
+    <!-- Screens -->
+    <div class="content-section">
+        <h2 class="content-title">Screens</h2>
+        <div class="screens-gallery">
+            <img src="images/lucky-tower/hero-gameplay.png" alt="Lucky Tower Gameplay Hero">
+            <img src="images/lucky-tower/floor-decision.png" alt="Floor Decision Screen">
+            <img src="images/lucky-tower/store.png" alt="Store Interface">
+        </div>
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
