Add Merge Lab live demo link

--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
                         </div>
                         <div class="project-links">
                             <a href="merge-lab.html" class="link-primary">View Case Study →</a>
+                            <a href="https://merge-lab.vercel.app/" target="_blank"
+                                class="link-secondary">Play Live Demo</a>
                         </div>
                     </div>
                 </div>
